--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,19 @@ div {
   border-radius: 0;
   text-align: center;
 }
+#skillsOverlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  top: 0;
+  padding: 0;
+  margin: 0;
+  border-radius: 0;
+  text-align: center;
+}
 #contactInfo {
   margin: 0 auto;
   text-align: start;
